--- a/index.html
+++ b/index.html
@@ -1106,10 +1106,10 @@
 </head>
 <body>
 	<div class=logo>
-		<a href=https://nullboard.io>Nullboard</a>
+		<a href=https://nullboard.io>看板</a>
 		<div class=bulk>
-			<a href=# class=view-about>About</a>
-			<a href=# class=view-license>License</a>
+			<a href=# class=view-about>关于</a>
+			<a href=# class=view-license>执照</a>
 			<a href=https://nullboard.io/github  target=_blank>Github</a>
 			<a href=https://nullboard.io/twitter target=_blank>Twitter</a>
 		</div>
@@ -1118,15 +1118,15 @@
 	<div class=config>
 		<a href=# class=teaser>&equiv;</a>
 		<div class=bulk>
-			<a href=# class=add-board>Add new board...</a>
+			<a href=# class=add-board>新增看板</a>
 			<div class=boards>
 				<!-- here'll be boards -->
 			</div>
-			<a href=# class=imp-board>Import board...</a>
+			<a href=# class=imp-board>导入看板</a>
 				<input class=imp-board-select type="file" accept=".nbx">
-			<a href=# class=exp-board>Export board...</a>
-			<a href="#" class="switch-theme">Use <i>light</i><b>dark</b> theme</a>
-			<a href="#" class="switch-fsize">Use <i>smaller</i><b>larger</b> font</a>
+			<a href=# class=exp-board>导出看板</a>
+			<a href="#" class="switch-theme">使用 <i>亮</i><b>暗</b> 主题</a>
+			<a href="#" class="switch-fsize">使用 <i>更小</i><b>更大</b> 字体</a>
 		</div>
 	</div>
 	</div>
@@ -1196,7 +1196,7 @@
 		<textarea class=encoder></textarea>
 
 		<div class=about>
-			<h1>Nullboard</h1>
+			<h1>看板</h1>
 			Minimalist locally-stored kanban board
 			<a href=https://nullboard.io target=_blank>https://nullboard.io</a>
 			<div></div>
