--- a/index.html
+++ b/index.html
@@ -1146,10 +1146,10 @@
 				<div class=menu>
 					<a href=# class=teaser>&equiv;</a>
 					<div class=bulk>
-						<a href=# class='del-board warn'><u></u> Board</a>
-						<a href=# class='undo-board'>Undo</a>
-						<a href=# class='redo-board'>Redo</a>
-						<a href=# class='add-list'>+ List</a>
+						<a href=# class='del-board warn'><u></u>删除看板</a>
+						<a href=# class='undo-board'>解除</a>
+						<a href=# class='redo-board'>重做</a>
+						<a href=# class='add-list'>添加菜单</a>
 					</div>
 				</div>
 			</div>
@@ -1165,11 +1165,11 @@
 				<div class=menu>
 					<a href=# class=teaser>&equiv;</a>
 					<div class=bulk>
-						<a href=# class='del-list warn'><u></u> List</a>
-						<a href=# class='mov-list-l full'>&lt; Move</a>
+						<a href=# class='del-list warn'><u></u> 删除列表</a>
+						<a href=# class='mov-list-l full'>&lt; 移动</a>
 						<a href=# class='mov-list-l half'>&lt; Mo</a><a href=# class='mov-list-r half'>ve &gt;</a>
-						<a href=# class='mov-list-r full'>Move &gt;</a>
-						<a href=# class='add-note'>+ Note</a>
+						<a href=# class='mov-list-r full'>移动 &gt;</a>
+						<a href=# class='add-note'>添加菜单</a>
 					</div>
 				</div>
 			</div>
@@ -1182,7 +1182,7 @@
 				<a href=# class=teaser></a>
 				<div class=bulk>
 					<a href=# class='del-note warn'><u></u></a>
-					<a href=# class='raw-note'>R</a>
+					<a href=# class='raw-note'>固定</a>
 					<a href=# class='collapse'>_</a>
 				</div>
 			</div>
